Suppress noisy startup warnings in perf client (#280)
- Set JUL logger level to WARNING to suppress the OTel
  auto-configuration INFO message
- Add --sun-misc-unsafe-memory-access=allow JVM flag to suppress
  Netty sun.misc.Unsafe deprecation warnings on Java 23+

Signed-off-by: Matteo Merli <mmerli@apache.org>